# quadrotor

./: CMakeLists.txt  README.md  package.xml  setup.py
include/: quad.h  quad_finite_state.h  quad_manager.h
launch/: quad_sim.launch
rviz/: quad_sim.rviz
scripts/: quad_cmd  quad_master  quad_sim
src/: quad.cpp  quad_manager.cpp
src/quadrotor/: quad.py  quad_model.py  sim_params.py
srv/: quad_cmd.srv
test/: quad_test.cpp  quad_test.py
